--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
   height: 320vh;
   width: 100%;
   pointer-events: none;
+  background-color: gray;
 }
 
 h1, h2 {
@@ -52,7 +53,8 @@ nav {
   top: 0;
   left: 0%;
   transform: scale(1);
-  box-shadow: 0 0 50px 5px rgba(0, 0, 128, .5);
+  box-shadow: 0 0 50px 5px rgba(0, 0, 0, .5);
+  background-color: white;
   position: fixed;
   z-index: -1;
 }
@@ -73,7 +75,7 @@ nav.landing-animation {
   0% {transform: scale(1.2)}
   65% {transform: scale(1.2)}
   80% {transform: scale(0.9)}
-  90% {transform: scale(1); box-shadow: 0 0 50px 5px rgba(0, 0, 128, .5);}
+  90% {transform: scale(1); box-shadow: 0 0 50px 5px rgba(0, 0, 0, .5);}
   100% {box-shadow: unset}
 }
 
@@ -112,24 +114,25 @@ nav.landing-animation {
   grid-gap: 30px;
 /*   border: 3px solid black; */
   border-bottom: none;
-  box-shadow: 0px -4px 5px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px -3px 4px rgba(0, 0, 0, 0.4);
   z-index: 6;
   pointer-events: auto;
   transition: 0.5s;
   opacity: 0;
   pointer-events: none;
-  transform: translate3d(-100%, 0, 0);
+/*   transform: translate3d(150%, 0%, 0); */
+/*   transform: translate3d(0%, -200%, 0); */
 }
 
 .in-focus.project-selector-buttons {
-  animation: slide-from-right 1s 0.5s forwards;
+/*   animation: slide-from-right 1s 0.5s forwards; */
   opacity: 1;
   pointer-events: auto;
 }
 
 @keyframes slide-from-right {
-  from{transform: translate3d(100%, 0, 0);}
-  to{opacity: 1; transform: translate3d(0, 0, 0)}
+  from{transform: translate3d(150%, 0%, 0); opacity: 0}
+  to{opacity: 1; /*! transform: translate3d(-100vw, 0, 0); */}
 }
 
 .nav-buttons {
@@ -234,7 +237,8 @@ nav.landing-animation {
 .project-containers {
 /*   background-color: red; */
   height: 90vh;
-  width: 300vw;
+  width: 400vw;
+  padding-left: 100vw;
   margin-top: 5vh;
   margin-bottom: 5vh;
 /*   padding-top: 10vh; */
@@ -256,7 +260,7 @@ nav.landing-animation {
   top: 7vh;
   width: 90vw;
   opacity: 0;
-  border-bottom: 2px solid gray;
+/*   border-bottom: 2px solid gray; */
   animation: slide-from-left 1s 0.5s forwards;
   transform: translate3d(-100%, 0, 0)
 }
@@ -268,19 +272,21 @@ nav.landing-animation {
 
 .project-containers.in-focus {
   opacity: 1;
+  transform: 
 /*   z-index: 1; */
 /*   pointer-events: auto; */
+/*   animation: slide-from-right 1s 0.5s forwards; */
 }
 
 .project-one-container, .project-two-container, .project-three-container {
   height: 85vh;
   width: 90vw;
-  margin-top: 7vh;
+  margin-top: 6.75vh;
   padding-bottom: 10vh;
 /*   background-color: red; */
-  box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
 /*   border: 3px solid black; */
-  border-top: 2px solid gray;
+/*   border-top: 2px solid gray; */
 /*   padding-right: 5vw; */
   padding-left: 5vw;
   margin-left: 5vw;
@@ -539,11 +545,11 @@ footer.in-focus {
 .about-me-container {
   display: flex;
   flex-flow: column nowrap;
-  padding-left: 35vw;
-  padding-right: 35vw;
+  padding-left: 15vw;
+  padding-right: 15vw;
   height: 100vh;
   width: 100%;
-  margin-top: 5vh;
+  margin-top: -5vh;
 /*   pointer-events: auto; */
   position: relative;
   font-size-adjust: 0.6;
@@ -733,7 +739,7 @@ i:hover {
   height: 4vh;
   justify-content: center;
   position: absolute;
-  top: 14vh;
+  top: 8vh;
 }
 
 .CoP-button {
