--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
   height: 500vh;
   width: 100%;
   pointer-events: none;
+/*   background-color: darkblue; */
 /*   background-color: gray; */
 }
 
@@ -30,13 +31,15 @@ body {
   top: 0;
   height: 100%;
   width: 100%;
-  box-shadow: inset 0px 0px 500px rgba(255, 255, 255, 1);
+  box-shadow: inset 300px 300px 500px rgba(255, 255, 255, 1);
+/*   box-shadow: inset 00px 00px 500px rgba(255, 255, 255, .2); */
   z-index: -2;
 }
 
 h1, h2 {
-  font-family: 'Fjalla One', sans-serif;
-  font-size-adjust: 1.3;
+/*   font-family: 'Fjalla One', sans-serif; */
+/*   font-size-adjust: 1.3; */
+  letter-spacing: 3px;
 }
 
 
@@ -69,63 +72,58 @@ h1, h2 {
 
 
 /*------------------- LANDING ---------------------*/
-#buffer-name-buffer {
+.screen-first {
+  position: fixed;
+  top: 0;
+  left: 0;
   height: 100vh;
   width: 100vw;
-  top: 0;
-  left: 0%;
-  transform: scale(1);
-/*   box-shadow: 0 0 50px 5px rgba(0, 0, 0, .5); */
-/*   background-color: black; */
+  /* background-color: skyblue; */
+  background-color: black;
+  transition: 1s;
+
+  /* transform: translate3d(-50%, 0, 0); */
+}
+
+.screen-second {
   position: fixed;
-  z-index: -1;
-  display: grid;
-  grid-template-areas: "left name right";
-  transition: 0.5s;
-    perspective: 3000px;
-/*   perspective-origin: 0% 0%; */
-}
-
-.buffer-left, .buffer-right {
-  transition: 0.5s;
-/*   border: 2px solid white; */
-/*   background-color: black; */
+  top: 0;
+  left: 0;
   height: 100vh;
-/*   margin-top: 10vh; */
-  width: 20vw;
-/*   opacity: 0; */
+  width: 100vw;
+  /* background-color: black; */
+  background-color: skyblue;
+  z-index: 2;
+  transition: 1s;
+  /* transform: translate3d(100%, 0, 0); */
 }
 
-.buffer-left {
-  grid-area: left;
-  transform: rotate3d(0, 1, 0, -75deg) translateZ(-60px);
-/*   transform: translate3d(0, -150%, 0); */
+.letter-holders {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  padding-left: 60vw;
+  display: flex;
+  justify-content: space-evenly;
+  /* justify-content: flex-end; */
+  transition: 1s;
 }
 
-.buffer-right {
-  grid-area: right;
-  transform: rotate3d(0, 1, 0, 75deg) translateZ(-60px);
-/*   transform: translate3d(0, -150%, 0); */
+.letter {
+  /* height: 50vh; */
+  height: 100vh;
+  width: 5%;
+  color: white;
+  background-color: black;
+  text-transform: uppercase;
+  font-size-adjust: 0.8;
+  line-height: 95vh;
+  text-align: center;
+  transition: 0.5s;
+  /* box-shadow: 0px 0px 0px 5px rgba(0, 0, 0, 1); */
 }
-
-.landing-animation .buffer-left {
-/*   animation: buffer-rotateL 1s 2s forwards; */
-}
-
-.landing-animation .buffer-right {
-/*   animation: buffer-rotateR 1s 2s forwards; */
-}
-
-@keyframes buffer-rotateL {
-  from {transform: rotate3d(0, 1, 0, -75deg) translateZ(-60px);}
-  to {transform: rotate3d(0, 1, 0, 0deg) translateZ(0px);}
-}
-
-@keyframes buffer-rotateR {
-  from {transform: rotate3d(0, 1, 0, 75deg) translateZ(-60px);}
-  to {transform: rotate3d(0, 1, 0, 0deg) translateZ(0px);}
-}
-
 
 
 
@@ -232,6 +230,7 @@ section.landing-animation {
 
 /* --------------------- ABOUT ME ------------------ */
 .about-me-container {
+  width: 98vw;
   transition: 0.5s;
   position: fixed;
   top: 100vh;
@@ -240,39 +239,80 @@ section.landing-animation {
   transform-style: preserve-3d;
   color: white;
   display: grid;
-  grid-template-areas: "label visual" "content visual";
+  justify-content: space-between;
+  grid-template-areas: "visual label" "visual content";
 }
 
 .about-me-label {
+  height: 10vh;
+  width: 58vw;
+  line-height: 10vh;
+  padding-left: 5vw;
   text-align: center;
   grid-area: label;
-  z-index: 1;
-/*   margin-top: 40%; */
+  z-index: 2;
   background-color: black;
-  border: 2px solid white;
-  transition: 0.5s;
+/*   border: 2px solid white; */
+  transition: 0.8s;
 /*   transform: translate3d(0, 300%, 0); */
 }
 
 .about-me-content {
+  height: 20vh;
+  width: 58vw;
   background-color: black;
-  border: 2px solid white;
-  text-align: center;
+/*   border: 2px solid white; */
+  text-align: left;
   grid-area: content;
-  line-height: 180%;
+  font-size-adjust: 0.6;
+  line-height: 190%;
+  padding: 1em;
+  padding-left: 4em;
+  padding-right: 4em;
   z-index: 1;
-  transition: 0.5s;
+  transition: 0.9s;
 /*   transform: translate3d(0, 300%, 0); */
 }
 
 .about-me-visual {
+  position: relative;
   background-color: black;
-  border: 2px solid white;
+/*   border: 2px solid white; */
   grid-area: visual;
-  height: 30vh;
-  width: 30vw;
-  transition: 0.5s;
+  height: 25vh;
+  width: 40vw;
+  transition: 1s;
 /*   transform: translate3d(0, 300%, 0); */
+}
+
+.about-me-visual:before {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  top: 0vh;
+  left: 0;
+  transition: 0.5s;
+}
+
+.about-me-visual.added:before {
+  top: -31vh;
+}
+
+.about-me-visual:after {
+  content: '';
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  top: 0vh;
+  left: 0;
+  transition: 0.5s;
+}
+
+.about-me-visual.added:after {
+  top: -62vh;
 }
 
 
@@ -286,25 +326,30 @@ section.landing-animation {
   position: fixed;
   top: 200vh;
   transition: 0.5s;
-  height: 100vh;
+  height: 90vh;
   display: grid;
   align-content: space-evenly;
 }
 
 .project-one-container, .project-two-container, .project-three-container {
   background-color: black;
+/*   background-image: linear-gradient(to right, transparent, black, 100%, transparent); */
   color: white;
   height: 25vh;
+  width: 40vw;
   transition: 0.5s;
+/*   opacity: 0; */
 }
+
+
 
 .project-one, .project-two, .project-three {
 
 }
 
 .project-one-container {
-/*   transform: translate3d(0%, 0%, 0); */
-  
+/*   transform: translate3d(0%, -195%, 0); */
+  transform: translate3d(0%, 245%, 0);
 }
 
 .project-one {
@@ -313,7 +358,7 @@ section.landing-animation {
 
 .project-two-container {
 /*   transform: translate3d(15%, 0%, 0); */
-
+  transform: translate3d(0%, 130%, 0);
 }
 
 .project-two {
@@ -322,7 +367,7 @@ section.landing-animation {
 
 .project-three-container {
 /*   transform: translate3d(0%, 100%, 0); */
-
+  transform: translate3d(0%, 15%, 0);
 }
 
 .project-three {
